<resources>
    <string name="app_name">BandIt</string>
    <string name="default_value">Default</string>
    <string name="fragment_login_bt_login">Log In</string>
    <string name="fragment_login_bt_signup">Sign Up</string>
    <string name="fragment_login_tv_username">Username: </string>
    <string name="fragment_login_tv_password">Password: </string>
    <string name="fragment_login_cb_remember">Remember Me</string>
    <string name="fragment_login_tv_registered">Not Registered Yet?</string>
    <string name="title_concerts">Concerts</string>
    <string name="title_songs">Songs</string>
    <string name="title_home">Home</string>
    <string name="title_chats">Chats</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_todolist">To Do List</string>
    <string name="fragment_home_tv_title">@string/app_name</string>
    <string name="home_tv_welcome">Welcome, name to</string>
    <string name="item_edit">Edit</string>
    <string name="item_delete">Delete</string>
    <string name="field_name">Name</string>
    <string name="concert_field_date">Date</string>
    <string name="concert_field_time">Time</string>
    <string name="concert_field_city">City</string>
    <string name="concert_field_country">Country</string>
    <string name="concert_field_place">Place</string>
    <string name="concert_field_type">Type</string>
    <string name="add_button">Add</string>
    <string name="save_button">Save</string>
    <string name="filter_button">Filter</string>
    <string name="account_field_nickname">Nickname</string>
    <string name="account_field_role">Role</string>
    <string name="account_field_bands">Bands</string>
    <string name="button_sign_out">Sign Out</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="sign_up_bt_cancel">Cancel</string>
    <string name="signup_bt_next">Next</string>
    <string name="band_button_empty">Create A Band</string>
    <string name="create_button">Create</string>
    <string name="band_bt_invite">Invite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bt_reject">Reject</string>
    <string name="bt_accept">Accept</string>
</resources>