<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbarStyle="outsideOverlay">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="32dp">

            <EditText
                android:id="@+id/concert_add_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/concert_field_name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@+id/concert_add_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/concert_add_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_marginVertical="8dp"
                android:width="100dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/concert_field_date"
                android:inputType="date"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@+id/concert_add_city"
                app:layout_constraintEnd_toStartOf="@+id/concert_add_time"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/concert_add_name" />

            <EditText
                android:id="@+id/concert_add_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_marginVertical="8dp"
                android:width="100dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/concert_field_time"
                android:inputType="time"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@+id/concert_add_city"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/concert_add_date"
                app:layout_constraintTop_toBottomOf="@+id/concert_add_name" />

            <EditText
                android:id="@+id/concert_add_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/concert_field_city"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@+id/concert_add_country"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/concert_add_date" />

            <EditText
                android:id="@+id/concert_add_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/concert_field_country"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                app:layout_constraintBottom_toTopOf="@+id/concert_add_place"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/concert_add_city" />

            <EditText
                android:id="@+id/concert_add_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/concert_field_place"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@+id/concert_add_spinner_type"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/concert_add_country" />

            <Spinner
                android:id="@+id/concert_add_spinner_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:autofillHints="@string/concert_field_type"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@+id/concert_bt_add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/concert_add_place" />

            <Button
                android:id="@+id/concert_bt_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:text="@string/add_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/concert_add_spinner_type" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>