<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <Button
            android:id="@+id/fragment_login_bt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/dark_spring_green"
            android:text="@string/fragment_login_bt_login"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_login_iv_logo"
            app:layout_constraintVertical_bias="0.56" />

        <Button
            android:id="@+id/fragment_login_bt_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="140dp"
            android:layout_marginTop="16dp"
            android:background="@color/dark_spring_green"
            android:text="@string/fragment_login_bt_signup"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_login_bt_login"
            app:layout_constraintVertical_bias="0.7" />

        <ImageView
            android:id="@+id/fragment_login_iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/fragment_login_iv_logo"
            android:scaleX="2"
            android:scaleY="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.100000024"
            app:srcCompat="@mipmap/ic_logo_foreground"
            tools:ignore="ImageContrastCheck"
            tools:src="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/fragment_login_tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/fragment_login_tv_username"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/fragment_login_tv_password"
            app:layout_constraintEnd_toStartOf="@+id/fragment_login_et_username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_login_iv_logo"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/fragment_login_tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/fragment_login_tv_password"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/fragment_login_cb_remember"
            app:layout_constraintEnd_toStartOf="@+id/fragment_login_et_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_login_tv_username" />

        <EditText
            android:id="@+id/fragment_login_et_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/fragment_login_et_username_hint"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/fragment_login_et_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/fragment_login_tv_username"
            app:layout_constraintTop_toBottomOf="@+id/fragment_login_iv_logo"
            app:layout_constraintVertical_chainStyle="packed"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/fragment_login_et_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/fragment_login_cb_remember"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/fragment_login_tv_password"
            app:layout_constraintTop_toBottomOf="@+id/fragment_login_et_username"
            tools:ignore="SpeakableTextPresentCheck" />

        <CheckBox
            android:id="@+id/fragment_login_cb_remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/fragment_login_cb_remember"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/fragment_login_bt_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/fragment_login_tv_registered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_login_tv_registered"
            app:layout_constraintBottom_toTopOf="@+id/fragment_login_bt_signup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_login_bt_login" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>